--- a/dcim/static/dcim/css/main.css
+++ b/dcim/static/dcim/css/main.css
@@ -26,7 +26,7 @@ html,body{height:100%}
 
 	width: 408px;
 	height: 294px;
-	background: url("../images/banner_logo.png") no-repeat;
+	background: url("../../../../static/images/banner_logo.png") no-repeat;
 	margin-top:90px;
 
 }
@@ -76,7 +76,7 @@ html,body{height:100%}
 	width: 306px;
 	height: 36px;
 	border: 1px solid #e0e0e0;
-	background: url("../images/icons02.png") 280px -41px no-repeat #f8f8f8;
+	background: url("../../../../static/images/icons02.png") 280px -41px no-repeat #f8f8f8;
 	outline: none;
 	font-size: 14px;
 	text-indent: 10px;
@@ -148,7 +148,7 @@ html,body{height:100%}
 
 .search_bar{width:1200px;height:115px;margin:0 auto;}
 .logo{width:150px;height:59px;margin:29px 0 0 17px;}
-.search_con{width:616px;height:38px;border:1px solid #37ab40;margin:34px 0 0 124px;background:url(../images/icons.png) 10px -338px no-repeat;}
+.search_con{width:616px;height:38px;border:1px solid #37ab40;margin:34px 0 0 124px;background:url(../../../../static/images/icons.png) 10px -338px no-repeat;}
 .search_con .input_text{width:470px;height:34px;border:0px;margin:2px 0 0 36px;outline:none;font-size:12px;color:#737272;font-family:'Microsoft Yahei'}
 
 .search_con .input_btn{
@@ -172,7 +172,16 @@ html,body{height:100%}
 
 .center_con{width:1200px;height:300px;margin:0 auto;}
 .subnav{width:198px;border-left:1px solid #eee;border-right:1px solid #eee;}
-.subnav li{height:44px;border-bottom:1px solid #eee;background:url(../images/icons.png) 178px -257px no-repeat #fff;}
+.subnav li{height:44px;border-bottom:1px solid #eee;background:url(../../../../static/images/icons.png) 178px -257px no-repeat #fff;}
 
 .subnav li a{display:block;height:44px;line-height:44px;text-indent:71px;font-size:14px;color:#333}
 .subnav li a:hover{color:#ff8800}
+
+.device_list_th{width:1198px;border:1px solid #ddd;background-color:#f7f7f7;margin:0 auto;}
+.device_list_th li{height:62px;line-height:62px;float:left;text-align:center;}
+.device_list_th .col01{width:6%;}
+.device_list_th .col02{width:35%;}
+.device_list_th .col03{width:6%;}
+.device_list_th .col04{width:35%;}
+.device_list_th .col02 img{width:320px;height: 60px}
+.device_list_th .col04 img{width:320px;height: 60px}
