--- a/dcim/templates/dcim/login.html
+++ b/dcim/templates/dcim/login.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>DCIM-登录</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/reset.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'dcim/css/reset.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'dcim/css/main.css' %}">
 </head>
 <body>
 <div class="login_top clearfix">
