--- a/dcim/templates/dcim/index.html
+++ b/dcim/templates/dcim/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <title>DCIM-首页</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/reset.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'dcim/css/reset.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'dcim/css/main.css' %}">
 </head>
 <body>
 <div class="search_bar clearfix">
     <a href="" class="corp_logo fl">
-        <img src="{% static 'images/logo_small.png' %}">
+        <img src="{% static 'dcim/images/logo_small.png' %}">
     </a>
     <div class="search_con fl">
         <input type="text" class="input_text fl" name="" placeholder="搜索设备">
